log/build_2022-11-03_15-23-02/trial_service/stdout_stderr.log
running egg_info
creating ../../build/trial_service/trial_service.egg-info
writing ../../build/trial_service/trial_service.egg-info/PKG-INFO
writing dependency_links to ../../build/trial_service/trial_service.egg-info/dependency_links.txt
writing entry points to ../../build/trial_service/trial_service.egg-info/entry_points.txt
writing requirements to ../../build/trial_service/trial_service.egg-info/requires.txt
writing top-level names to ../../build/trial_service/trial_service.egg-info/top_level.txt
writing manifest file '../../build/trial_service/trial_service.egg-info/SOURCES.txt'
reading manifest file '../../build/trial_service/trial_service.egg-info/SOURCES.txt'
writing manifest file '../../build/trial_service/trial_service.egg-info/SOURCES.txt'
running build
running build_py
creating /home/jeong/trial_ws/build/trial_service/build
creating /home/jeong/trial_ws/build/trial_service/build/lib
creating /home/jeong/trial_ws/build/trial_service/build/lib/trial_service
copying trial_service/trial_server.py -> /home/jeong/trial_ws/build/trial_service/build/lib/trial_service
copying trial_service/trial_client.py -> /home/jeong/trial_ws/build/trial_service/build/lib/trial_service
copying trial_service/__init__.py -> /home/jeong/trial_ws/build/trial_service/build/lib/trial_service
running install
running install_lib
creating /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service
copying /home/jeong/trial_ws/build/trial_service/build/lib/trial_service/trial_server.py -> /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service
copying /home/jeong/trial_ws/build/trial_service/build/lib/trial_service/trial_client.py -> /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service
copying /home/jeong/trial_ws/build/trial_service/build/lib/trial_service/__init__.py -> /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service
byte-compiling /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service/trial_server.py to trial_server.cpython-38.pyc
byte-compiling /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service/trial_client.py to trial_client.cpython-38.pyc
  File "/home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service/trial_server.py", line 14
    return response
    ^
SyntaxError: invalid syntax

byte-compiling /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service/__init__.py to __init__.cpython-38.pyc
running install_data
creating /home/jeong/trial_ws/install/trial_service/share/ament_index
creating /home/jeong/trial_ws/install/trial_service/share/ament_index/resource_index
creating /home/jeong/trial_ws/install/trial_service/share/ament_index/resource_index/packages
copying resource/trial_service -> /home/jeong/trial_ws/install/trial_service/share/ament_index/resource_index/packages
copying package.xml -> /home/jeong/trial_ws/install/trial_service/share/trial_service
running install_egg_info
Copying ../../build/trial_service/trial_service.egg-info to /home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service-0.0.0-py3.8.egg-info
running install_scripts
Installing client script to /home/jeong/trial_ws/install/trial_service/lib/trial_service
Installing server script to /home/jeong/trial_ws/install/trial_service/lib/trial_service
writing list of installed files to '/home/jeong/trial_ws/build/trial_service/install.log'
